--- a/react-burger/package.json
+++ b/react-burger/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.12.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.4",
