--- a/react-burger/package.json
+++ b/react-burger/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.12.0",
+    "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
