--- a/react-burger/package.json
+++ b/react-burger/package.json
@@ -32,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress:open": "./node_modules/.bin/cypress open",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^9.2.1",
     "gh-pages": "^3.2.3"
   }
 }
